removed proprietary plugins