@@ -43,117 +43,7 @@
   </dependencies>
 
   <build>
-    <!-- finalName>${foo.bar}-${parsedVersion.majorVersion}</finalName -->
     <plugins>
-      <plugin><!-- TODO print appliction version -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>3.0.0</version>
-        <executions>
-          <execution>
-            <phase>generate-resources</phase>
-            <configuration>
-              <target>
-                <mkdir dir="${basedir}/target/classes/META-INF" />
-                <echo file="${basedir}/target/classes/META-INF/pominfo.properties">
-                  groupId = ${project.groupId}
-                  artifactId = ${project.artifactId}
-                  version = ${project.version}
-                  name = ${project.name}
-                  url = ${project.url}
-                </echo>
-              </target>
-            </configuration>
-            <goals>
-              <goal>run</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>3.2.0</version>
-        <executions>
-          <execution>
-            <id>parse-version</id>
-            <goals>
-              <goal>parse-version</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.cargo</groupId>
-        <artifactId>cargo-maven2-plugin</artifactId>
-        <version>1.7.1</version>
-        <configuration>
-          <container>
-            <containerId>tomcat9x</containerId>
-            <artifactInstaller>
-              <groupId>org.apache.tomcat</groupId>
-              <artifactId>tomcat</artifactId>
-              <version>9.0.14</version>
-            </artifactInstaller>
-          </container>
-          <configuration>
-            <type>standalone</type>
-            <home>${project.build.directory}/tomcat</home>
-            <properties>
-              <cargo.servlet.port>8080</cargo.servlet.port>
-              <cargo.logging>medium</cargo.logging>
-              <!-- TODO: requires Java 9+ (which is not an official prerequiste (yet)) -->
-              <cargo.start.jvmargs>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,quiet=n,address=8000 --illegal-access=deny</cargo.start.jvmargs>
-            </properties>
-          </configuration>
-          <deployables>
-            <deployable>
-              <groupId>${project.groupId}</groupId>
-              <artifactId>${project.artifactId}</artifactId>
-              <type>war</type>
-              <properties>
-                <context>/</context>
-              </properties>
-            </deployable>
-          </deployables>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>net.oneandone.maven.plugins</groupId>
-        <artifactId>dockerbuild</artifactId>
-        <version>1.2.2</version>
-        <executions>
-          <execution>
-            <id>dockerbuild-package</id>
-            <goals>
-              <goal>build</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>dockerbuild-deploy</id>
-            <goals>
-              <goal>push</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <library>com.ionos.maven.plugins.dockerbuild.library</library>
-          <dockerbuild>kutter-tomcat-war</dockerbuild>
-          <image>contargo.server.lan/cisoops-public/%a%-b:%V</image>
-          <arguments>
-            <war>%copy:%artifact:war</war>
-            <directions><![CDATA[
-%base64:%filter:DIRECTIONS: "${project.artifactId}"
-EXTENDS: "kutter"
-image: "${dockerbuild.image}"
-metadataOrigin: "${dockerbuild.origin}"
-metadataScm: "${project.scm.url}"
-]]></directions>
-          </arguments>
-        </configuration>
-      </plugin>
-
     </plugins>
   </build>
 </project>
